--- a/mainpage/templates/mainpage/main.html
+++ b/mainpage/templates/mainpage/main.html
@@ -48,9 +48,9 @@
 	<section id="home" class="pfblock-image screen-height">
     <div class="home-overlay"></div>
 		<div class="intro">
-			<div class="start">Hello, my name is Vlad Moroshan and I am</div>
-			<h1>Full-Stack Web Developer</h1>
-			<div class="start">creating modern and responsive Web Application</div>
+			<div class="start">Hello, my name is Yan-Ru Jhou and I am</div>
+			<h1>UCLA Computer Science Master Student</h1>
+			<div class="start">creating modern and responsive Software Application</div>
 		</div>
 
 		<a href="#services">
@@ -79,14 +79,14 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Vlad Moroshan</a>
+					<a class="navbar-brand" href="index.html">YanRu Jhou</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#home">Home</a></li>
 						<li><a href="#services">About me</a></li>
-            <li><a href="#portfolio">Works</a></li>
+                        <li><a href="#portfolio">Works</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -123,7 +123,7 @@
 
 				<div class="col-sm-4">
 					<div class="pfblock-header wow fadeInUp">
-						<img id="myphoto" src="{% static 'mainpage/images/me.jpg' %}" alt="Vladislav Moroshan" style="border-radius: 100%;filter:grayscale(30%);">
+						<img id="myphoto" src="{% static 'mainpage/images/profilepic.jpg' %}" alt="Vladislav Moroshan" style="border-radius: 100%;filter:grayscale(30%);">
 					</div>
 				</div>
 		</div><!-- .container -->
